--- a/Moringa_School_based_application/index.html
+++ b/Moringa_School_based_application/index.html
@@ -26,10 +26,17 @@
                                 <input type="text" name="task" autocomplete="off">
                                 <div>
                                     <span class="task-id"></span>
+                                    <span>
+                                        <button class="bi bi-pencil edit" data-id=""></button>
+                                        <button class="bi bi-check lg update hide" data-id=""></button>
+                                        <button class="bi bi-trash3 delete" data-id=""></button>
+                                    </span>
                                 </div>
                             </form>
                         </div>
-                        <form action="#" class="add"></form>
+                        <form action="#" class="add">
+                            <input type="text" name="task" placeholder="New task" autocomplete="off" maxlength="30">
+                            <button class="bi bi-plus" data-id="" name="submit"></button>
                     </div>
                 </section>
             </div>
