--- a/Moringa_School_based_application/index.html
+++ b/Moringa_School_based_application/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The application for the students progress">
     <link rel="stylesheet" href="./CSS/stylesfestus.css">
-    <title>Moringa School Based Application</title>   
+    <title>Moringa School Based Application</title>  
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+
 </head>
 <body>
     <main>
@@ -27,7 +29,7 @@
                                 <div>
                                     <span class="task-id"></span>
                                     <span>
-                                        <button class="bi bi-pencil edit" data-id=""></button>
+                                        <button class="edit" data-id=""><i class="uil uil-pen"></i></button>
                                         <button class="bi bi-check lg update hide" data-id=""></button>
                                         <button class="bi bi-trash3 delete" data-id=""></button>
                                     </span>
