--- a/Moringa_School_based_application/index.html
+++ b/Moringa_School_based_application/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The application for the students progress">
     <link rel="stylesheet" href="./CSS/stylesfestus.css">
+    <link rel = "stylesheet" href = "resources/font.css">
     <title>Moringa School Based Application</title>  
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 
@@ -14,31 +15,31 @@
         <div class="outer-wrap">
             <div class="inner-wrap">
                 <section class="heading">
-                    <p class="title"></p>
-                    <p class="subtitle"></p>
+                    <p class="title">Moringa</p>
+                    <p class="subtitle">Application handling Project's progress</p>
                 </section>
                 <section class="kanban">
                     <div class="taskbar">
                         <div class="title">
-                            <p></p>
-                            <span class="todo"></span>
+                            <p>TODO</p>
+                            <span class="todo">2</span>
                         </div>
                         <div class="cards todo">
-                            <form action="#" class="card">
-                                <input type="text" name="task" autocomplete="off">
+                            <form    class="card">
+                                <input value="TEST" type="text" name="task" autocomplete="off" disabled="disabled">
                                 <div>
-                                    <span class="task-id"></span>
+                                    <span class="task-id">#97522</span>
                                     <span>
                                         <button class="edit" data-id=""><i class="uil uil-pen"></i></button>
-                                        <button class="bi bi-check lg update hide" data-id=""></button>
-                                        <button class="bi bi-trash3 delete" data-id=""></button>
+                                        <button class="update" data-id=""><i class="uil uil-check"></i></button>
+                                        <button class="delete" data-id=""><i class="uil uil-trash-alt"></i></button>
                                     </span>
                                 </div>
                             </form>
                         </div>
-                        <form action="#" class="add">
+                        <form  class="add">
                             <input type="text" name="task" placeholder="New task" autocomplete="off" maxlength="30">
-                            <button class="bi bi-plus" data-id="" name="submit"></button>
+                            <button class="plus" data-id="" name="submit"><i class="uil uil-plus"></i></button>
                     </div>
                 </section>
             </div>
