--- a/Moringa_School_based_application/index.html
+++ b/Moringa_School_based_application/index.html
@@ -25,7 +25,53 @@
                             <span class="todo">2</span>
                         </div>
                         <div class="cards todo">
-                            <form    class="card">
+                            <form  class="card">
+                                <input value="TEST" type="text" name="task" autocomplete="off" disabled="disabled">
+                                <div>
+                                    <span class="task-id">#97522</span>
+                                    <span>
+                                        <button class="edit" data-id=""><i class="uil uil-pen"></i></button>
+                                        <button class="update" data-id=""><i class="uil uil-check"></i></button>
+                                        <button class="delete" data-id=""><i class="uil uil-trash-alt"></i></button>
+                                    </span>
+                                </div>
+                            </form>
+                        </div>
+                        <form  class="add">
+                            <input type="text" name="task" placeholder="New task" autocomplete="off" maxlength="30">
+                            <button class="plus" data-id="" name="submit"><i class="uil uil-plus"></i></button>
+                    </div>
+
+                    <div class="taskbar">
+                        <div class="title">
+                            <p>In progress</p>
+                            <span class="pending">1</span>
+                        </div>
+                        <div class="cards pending">
+                            <form  class="card">
+                                <input value="TEST" type="text" name="task" autocomplete="off" disabled="disabled">
+                                <div>
+                                    <span class="task-id">#97522</span>
+                                    <span>
+                                        <button class="edit" data-id=""><i class="uil uil-pen"></i></button>
+                                        <button class="update" data-id=""><i class="uil uil-check"></i></button>
+                                        <button class="delete" data-id=""><i class="uil uil-trash-alt"></i></button>
+                                    </span>
+                                </div>
+                            </form>
+                        </div>
+                        <form  class="add">
+                            <input type="text" name="task" placeholder="New task" autocomplete="off" maxlength="30">
+                            <button class="plus" data-id="" name="submit"><i class="uil uil-plus"></i></button>
+                    </div>
+
+                    <div class="taskbar">
+                        <div class="title">
+                            <p>Completed</p>
+                            <span class="completed">2</span>
+                        </div>
+                        <div class="cards completed">
+                            <form  class="card">
                                 <input value="TEST" type="text" name="task" autocomplete="off" disabled="disabled">
                                 <div>
                                     <span class="task-id">#97522</span>
